--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "react-syntax-highlighter": "^15.5.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/dom-speech-recognition": "^0.0.4"
   }
 }
